[project]
name = "one-step-pi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JustinTienken-Harder", email = "justinhardermsc@gmail.com"},
]
dependencies = ["ipykernel>=7.2.0", "torch>=2.7.1", "transformers>=5.5.0", "diffusers>=0.37.1", "torchvision>=0.22.1", "onnx>=1.21.0", "onnxscript>=0.6.2", "onnxruntime>=1.24.4"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
